--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     },
     "autoload": {
         "files": [
-            "registration.php"
+            "src/registration.php"
         ],
         "psr-4": {
-            "Eriocnemis\\ExchangeEcb\\": ""
+            "Eriocnemis\\ExchangeEcb\\": "src"
         }
     }
 }
