--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,8 +12,9 @@ repos:
     -   id: pretty-format-json
         args: ["--indent=4", "--autofix", "--no-sort-keys"]
 -   repo: https://github.com/eriocnemis/git.MagentoPreCommitHooks
-    rev: 1.0.8
+    rev: 1.0.10
     hooks:
+    -   id: magento-xml
     -   id: magento-phpcs
         args: ["--autofix"]
     -   id: magento-phpmd
