--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "eriocnemis/module-exchange-ecb",
     "description": "The extension retrieves currency exchange rates from the European Central Bank.",
     "type": "magento2-module",
-    "version": "2.4.2",
+    "version": "2.4.3",
     "authors": [
         {
             "name": "Eriocnemis Team",
@@ -13,6 +13,7 @@
         "OSL-3.0"
     ],
     "require": {
+        "php": "~7.3.0||~7.4.0",
         "magento/framework": "103.0.*",
         "magento/module-directory": "100.4.*",
         "magento/module-store": "101.1.*"
